Mar 04, 2022
  tuned up logging

Jan 06, 2022
  updated log4j to avoid zero day exploit

Sep 25, 2020
  improved matching
  added separate logging of multimatches

Aug 03, 2020
  build.gradle: changed app name to 'rna-central-pipeline' from RNACentral' to align code with github

Jun 19, 2020
  updated jars

Feb 25, 2020
  -removed unused 'spring' log

Jan 29, 2020
  -qc now done by apache CollectionUtils
  -downloaded files are now saved compressed, to preserve disk space

Nov 18, 2019
  -code cleanup

v 1.0.0, Mar 04, 2019
  -RNACentral xdb ids loaded by matching REFSEQ accessions